--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -79,5 +79,23 @@
         "orange": "Orange",
         "yellow": "Yellow"
     },
-    "cancelBtn": "Cancel"
+    "editPopUp": {
+        "editProprietiesSmall": "Edit the properties of the currently selected task.",
+        "editTask": "Edit Task",
+        "taskName": "Task Name: ",
+        "previousVersion": "Previous Version: ",
+        "newerVersion": "Newer Version: ",
+        "taskNameEllipsis": "Task Name...",
+        "previousVersionEllipsis": "Previous Version...",
+        "newerVersionEllipsis": "Newer Version...",
+        "close": "Close",
+        "delete": "Delete Task",
+        "edit": "Edit",
+        "errorEdit": "Unable to edit the Task. Invalid Task name.",
+        "errorVersions": "Unable to edit the Task. You cannot add just one version.",
+        "deleteConfirm": "Are you sure you want to delete this Task?",
+        "unsavedChanges": "Are you sure you want to quit and not save the unsaved changes?",
+        "optional": "Optional",
+        "taskTitle": "Enter the new Task Name"
+    }
 }
