fix: fixing some translations
* fixed some translations

--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -37,10 +37,10 @@
         "appearanceSettings": "Aspetto:",
         "darkTheme": " 🌙 Tema Scuro",
         "lightTheme": " ☀️ Tema Chiaro",
-        "webReferences": "Referenze Web:",
+        "webReferences": "Collegamenti Web:",
         "openOnGithub": "Apri su GitHub",
         "seeLicense": "Vedi Licenza",
-        "needHelpSettings": "Bisogno di Aiuto?",
+        "needHelpSettings": "Hai bisogno di Aiuto?",
         "leaveAFeedback": "Lascia un Feedback",
         "writeBug": "Scrivi un Bug Report.",
         "leaveAFeedbackDot": "Lascia un Feedback.",
