feat: added spanish
* added spanish translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -122,6 +122,7 @@
     },
     "languages": {
         "italian": "🇮🇹 Italian",
-        "english-us": "🇬🇧/🇺🇸 English"
+        "english-us": "🇬🇧/🇺🇸 English",
+        "spanish": "🇪🇸 Spanish"
     }
 }
