--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -122,6 +122,7 @@
     },
     "languages": {
         "italian": "🇮🇹 Italiano",
-        "english-us": "🇬🇧/🇺🇸 Inglese"
+        "english-us": "🇬🇧/🇺🇸 Inglese",
+        "spanish": "🇪🇸 Spagnolo"
     }
 }
